# howtoDevOps

./: LICENSE  README.md  pyproject.toml
src/DevOps/: helloDevops.py  hello_devops.py
src/DevOps/calculator/: calculator.py
tests/DevOps/calculator/: test_calculator.py
